Update date format

--- a/service/document.html
+++ b/service/document.html
@@ -39,7 +39,7 @@
             <div class="hero-content text-center animate__animated animate__fadeInUp">
                 <div class="max-w-md">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Privacy & Terms</h1>
-                    <p class="py-6"><b>Last updated: 2023 10 01</b></p>
+                    <p class="py-6"><b>Last updated: 2023/10/01</b></p>
                     <button onclick="window.location.href = './';" class="btn"><span
                             class="material-symbols-outlined">arrow_back</span>Back</button>
                 </div>
@@ -51,7 +51,7 @@
                 <div class="max-w-md lefted">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Privacy policy</h1>
                     <p class="py-6">
-                        <b>Last updated: 2023 10 01</b><br><br>
+                        <b>Last updated: 2023/10/01</b><br><br>
 
                         Futami collects your Discord user ID and username, the messages you send and receive in the
                         channels where Futami is present, and information about your device. Futami uses this
@@ -72,7 +72,7 @@
                 <div class="max-w-md lefted">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Terms of service</h1>
                     <p class="py-6">
-                        <b>Last updated: 2023 10 01</b><br><br>
+                        <b>Last updated: 2023/10/01</b><br><br>
 
                         By using Futami, you agree to the following:<br><br>
 
