Update game info

--- a/service/index.html
+++ b/service/index.html
@@ -86,8 +86,18 @@
                 </div>
             </div>
         </div>
-        <div style="padding-top: 0;" class="hero bg-base-200 hero-normal">
+        <div style="padding-top: 0;" class="hero bg-base-200 hero-game">
             <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row">
+                <img style="max-width: 18rem;" src="./assets/feature-game.png"
+                    class="max-w-sm rounded-lg shadow-2xl image-feature" />
+                <div>
+                    <h1 class="text-5xl font-bold">Play game anywhere</h1>
+                    <p class="py-6">With gamecommand (Gamecord)</p>
+                </div>
+            </div>
+        </div>
+        <div style="padding-top: 0;" class="hero bg-base-200 hero-normal">
+            <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
                 <img style="max-width: 18rem;" src="./assets/feature-fun.png"
                     class="max-w-sm rounded-lg shadow-2xl image-feature" />
                 <div>
@@ -97,7 +107,7 @@
             </div>
         </div>
         <div style="padding-top: 0;" class="hero bg-base-200 hero-normal hero-mod">
-            <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
+            <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row">
                 <img style="max-width: 18rem;" src="./assets/feature-mod.png" class="max-w-sm rounded-lg shadow-2xl" />
                 <div>
                     <h1 class="text-5xl font-bold">Make moderation easier</h1>
