--- a/service/index.html
+++ b/service/index.html
@@ -29,6 +29,13 @@
 </head>
 
 <body>
+    <div role="alert" class="alert alert-warning alert-top">
+        <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+        </svg>
+        <span>Futami : End of Support (29.03.24)</span>
+    </div>
     <button class="btn btn-circle btn-outline button-top animate__animated" id="top-button">
         <span class="material-symbols-outlined">
             vertical_align_top
@@ -239,6 +246,11 @@
                     <span id="agreeText" class="label-text">I have read and agree to futami.fujatyping.dev's ToS and
                         PP</span>
                     <input id="agreeBox" type="checkbox" class="checkbox" />
+                </label>
+                <label class="label cursor-pointer">
+                    <span id="agreeText2" class="label-text">I know Futami won't receive updates or bug fixes and
+                        discontinued after 31.03.24</span>
+                    <input id="agreeBox2" type="checkbox" class="checkbox" />
                 </label>
             </div>
             <div class="modal-action">
