Update github button

--- a/service/index.html
+++ b/service/index.html
@@ -206,9 +206,14 @@
                     <p class="py-6">Fuumi is a music bot created by FujaTyping in response to a request from his close
                         friend, ph007phop. Fuumi can play music from a variety of sources and quickly gained popularity
                         among Discord users.</p>
-                    <button onclick="window.location.href = 'https://link.fujatyping.dev/discord';"
-                        class="btn bg-base-300"><span class="material-symbols-outlined">support_agent</span>
-                        Support</button>
+                    <div class="btn-group">
+                        <button onclick="window.location.href = 'https://link.fujatyping.dev/discord';"
+                            class="btn bg-base-300"><span class="material-symbols-outlined">support_agent</span>
+                            Support</button>
+                        <button onclick="window.location.href = 'https://github.com/FujaTyping/Futami';"
+                            class="btn btn-outline"><span class="material-symbols-outlined">frame_source</span>
+                            Source code</button>
+                    </div>
                 </div>
             </div>
         </div>
