--- a/service/index.html
+++ b/service/index.html
@@ -29,13 +29,13 @@
 </head>
 
 <body>
-    <div role="alert" class="alert alert-warning alert-top">
+    <!-- <div role="alert" class="alert alert-warning alert-top">
         <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
         </svg>
         <span>Futami : End of Support (29.03.24)</span>
-    </div>
+    </div> -->
     <button class="btn btn-circle btn-outline button-top animate__animated" id="top-button">
         <span class="material-symbols-outlined">
             vertical_align_top
@@ -47,7 +47,7 @@
                 <div style="margin-right: 15px;" class="tooltip tooltip-secondary" data-tip="Streaming">
                     <div class="avatar">
                         <div class="rounded-full ring ring-secondary ring-offset-base-100 ring-offset-2">
-                            <img class="profile" src="./assets/event/futami (songkharn).png" />
+                            <img class="profile" src="./assets/fav.ico" />
                         </div>
                     </div>
                 </div>
@@ -252,11 +252,11 @@
                         PP</span>
                     <input id="agreeBox" type="checkbox" class="checkbox" />
                 </label>
-                <label class="label cursor-pointer">
+                <!-- label class="label cursor-pointer">
                     <span id="agreeText2" class="label-text">I know Futami won't receive updates or bug fixes and
                         discontinued after 31.03.24</span>
                     <input id="agreeBox2" type="checkbox" class="checkbox" />
-                </label>
+                </label> -->
             </div>
             <div class="modal-action">
                 <button onclick="ContinueInvite()" id="ConfirmInvite" class="btn">Continue</button>
