--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -57,7 +57,7 @@
                             class="badge badge-primary animate__animated animate__jello animate__delay-1s animate__infinite">All
                             service is
                             online</span></h1>
-                    <p class="py-6">Imagine music bot<br>Message from Futami : You're so cute 💙
+                    <p class="py-6">Imagine music bot<br>Message from Futami : Happy new year 🌴
                     </p>
                     <div class="btn-group">
                         <button onclick="pleaseread_modal.showModal()" class="btn btn-outline">Invite now <span
