Add donation embed

--- a/service/document.html
+++ b/service/document.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <button class="btn btn-circle btn-outline button-top animate__animated" id="top-button">
+    <button class="btn btn-circle btn-outline button-top-PP animate__animated" id="top-button">
         <span class="material-symbols-outlined">
             vertical_align_top
         </span>
