--- a/service/index.html
+++ b/service/index.html
@@ -36,7 +36,8 @@
         </svg>
         <span>Futami : End of Support (29.03.24)</span>
     </div> -->
-    <button class="btn btn-circle btn-outline button-top animate__animated" id="top-button">
+    <button style="width: 60px !important;height: 60px !important;"
+        class="btn btn-circle btn-outline button-top animate__animated" id="top-button">
         <span class="material-symbols-outlined">
             vertical_align_top
         </span>
@@ -224,6 +225,9 @@
             </aside>
         </footer>
     </div>
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+        data-id="fujatyping" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF"
+        data-position="Right" data-x_margin="18" data-y_margin="18"></script>
     <dialog id="filter_modal" class="modal">
         <div class="modal-box">
             <h3 class="font-bold text-lg">Filter list <a href="https://ffmpeg.org/ffmpeg-filters.html">(FFmpeg audio
