Change fujatyping.dev to siraphop.me

--- a/firebase/public/document.html
+++ b/firebase/public/document.html
@@ -9,7 +9,7 @@
     <title>Futami</title>
     <meta name="theme-color" content="#345ca8" />
     <meta name="description" content="Futami - Privacy & Terms">
-    <meta property="og:image" content="https://futami.fujatyping.dev/assets/banner/content-pat.png" />
+    <meta property="og:image" content="https://futami.siraphop.me/assets/banner/content-pat.png" />
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
@@ -18,7 +18,7 @@
     <meta name="twitter:description" content="Futami - Privacy & Terms">
     <meta name="twitter:site" content="@fujatyping" />
     <meta name="twitter:creator" content="@fujatyping" />
-    <meta property="twitter:image" content="https://futami.fujatyping.dev/assets/banner/content-pat.png" />
+    <meta property="twitter:image" content="https://futami.siraphop.me/assets/banner/content-pat.png" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <button class="btn btn-circle btn-outline button-top animate__animated" id="top-button">
+    <button class="btn btn-circle btn-outline button-top-PP animate__animated" id="top-button">
         <span class="material-symbols-outlined">
             vertical_align_top
         </span>
@@ -103,7 +103,7 @@
         </div>
         <footer class="footer footer-center p-4 bg-base-300 text-base-content">
             <aside>
-                <p>Copyright © <a href="https://fujatyping.dev/">FujaTyping</a> 2023-2024 | All right reserved</p>
+                <p>Copyright © <a href="https://siraphop.me/">FujaTyping</a> 2023-2024 | All right reserved</p>
             </aside>
         </footer>
     </div>
