--- a/service/index.html
+++ b/service/index.html
@@ -9,7 +9,7 @@
     <title>Futami</title>
     <meta name="theme-color" content="#345ca8" />
     <meta name="description" content="Futami - Imagine music bot">
-    <meta property="og:image" content="https://futami.fujatyping.dev/assets/banner/content-index.png" />
+    <meta property="og:image" content="https://futami.siraphop.me/assets/banner/content-index.png" />
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
@@ -18,7 +18,7 @@
     <meta name="twitter:description" content="Futami - Imagine music bot">
     <meta name="twitter:site" content="@fujatyping" />
     <meta name="twitter:creator" content="@fujatyping" />
-    <meta property="twitter:image" content="https://futami.fujatyping.dev/assets/banner/content-index.png" />
+    <meta property="twitter:image" content="https://futami.siraphop.me/assets/banner/content-index.png" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
@@ -208,7 +208,7 @@
                         friend, ph007phop. Fuumi can play music from a variety of sources and quickly gained popularity
                         among Discord users.</p>
                     <div class="btn-group">
-                        <button onclick="window.location.href = 'https://link.fujatyping.dev/discord';"
+                        <button onclick="window.location.href = 'https://link.siraphop.me/discord';"
                             class="btn bg-base-300"><span class="material-symbols-outlined">support_agent</span>
                             Support</button>
                         <button onclick="window.location.href = 'https://github.com/FujaTyping/Futami';"
@@ -220,7 +220,7 @@
         </div>
         <footer class="footer footer-center p-4 bg-base-300 text-base-content">
             <aside>
-                <p>Copyright © <a href="https://fujatyping.dev/">FujaTyping</a> 2023-2024 | All right reserved</p>
+                <p>Copyright © <a href="https://siraphop.me/">FujaTyping</a> 2023-2024 | All right reserved</p>
                 <img width="200px" style="margin-top: 8px;" src="https://count.getloli.com/get/@futami?theme=moebooru">
             </aside>
         </footer>
@@ -252,7 +252,7 @@
             </p>
             <div class="form-control">
                 <label class="label cursor-pointer">
-                    <span id="agreeText" class="label-text">I have read and agree to futami.fujatyping.dev's ToS and
+                    <span id="agreeText" class="label-text">I have read and agree to futami.siraphop.me's ToS and
                         PP</span>
                     <input id="agreeBox" type="checkbox" class="checkbox" />
                 </label>
