--- a/service/index.html
+++ b/service/index.html
@@ -70,6 +70,12 @@
                 </div>
             </div>
         </div>
+        <div style="padding-bottom: 20px;" class="hero bg-base-100 arrow-assets">
+            <div class="hero-content text-center">
+                <button onclick="GetLastSong()" class="btn"><span class="material-symbols-outlined">equalizer</span>
+                    Player Status</button>
+            </div>
+        </div>
         <img width="100%" src="./assets/divider.png">
         <div style="padding-top: 40px;" class="hero bg-base-200">
             <div class="hero-content text-center">
@@ -84,9 +90,7 @@
                     class="max-w-sm rounded-lg shadow-2xl" />
                 <div>
                     <h1 class="text-5xl font-bold">Support many music platform</h1>
-                    <p class="py-6">Future will support more platform :D &nbsp; <span onclick="GetLastSong()"
-                            class="badge"><b>Checkout Futami
-                                player</b></span></p>
+                    <p class="py-6">Future will support more platform :D</p>
                     <div class="flex flex-col w-full lg:flex-row">
                         <div class="grid flex-grow h-20 card bg-base-300 rounded-box place-items-center">Soundcloud /
                             Spotify / Deezer</div>
