Update Privacy & Terms

--- a/firebase/public/document.html
+++ b/firebase/public/document.html
@@ -39,7 +39,7 @@
             <div class="hero-content text-center animate__animated animate__fadeInUp">
                 <div class="max-w-md">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Privacy & Terms</h1>
-                    <p class="py-6"><b>Last updated: 2023/10/01</b></p>
+                    <p class="py-6"><b>Last updated: 2024/04/20</b></p>
                     <button onclick="window.location.href = './';" class="btn"><span
                             class="material-symbols-outlined">arrow_back</span>Back</button>
                 </div>
@@ -49,20 +49,33 @@
         <div class="hero bg-base-200 hero-normal">
             <div class="hero-content text-center">
                 <div class="max-w-md lefted">
+                    <div role="alert" class="alert alert-warning">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none"
+                            viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+                        </svg>
+                        <span>The developer may change these Privacy policy & Terms of Service at any time. Any changes
+                            will be posted on
+                            the
+                            Futami website and will take effect immediately.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="hero bg-base-200 hero-normal">
+            <div class="hero-content text-center">
+                <div class="max-w-md lefted">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Privacy policy</h1>
                     <p class="py-6">
-                        <b>Last updated: 2023/10/01</b><br><br>
+                        <b>Last updated: 2024/04/20</b><br><br>
 
-                        Futami collects your Discord user ID and username, the messages you send and receive in the
-                        channels where Futami is present, and information about your device. Futami uses this
-                        information to provide you with the services that you request and to improve its services.
-                        Futami does not share your information with any third parties, except as required by
-                        law.<br><br>
+                        Futami collects your Discord user ID, username, and server IDs. Futami uses this information to
+                        provide you with the services that you request and to improve its services. Futami does not
+                        share your information with any third parties, except as required by law.<br><br>
 
-                        You can manage your privacy settings for Futami by visiting the Futami website.<br><br>
-
-                        By using Futami, you consent to the collection, use, and sharing of your information as
-                        described in this privacy policy.
+                        By using Futami, you consent to the collection and use of your information as described in this
+                        privacy policy.
                     </p>
                 </div>
             </div>
@@ -72,15 +85,9 @@
                 <div class="max-w-md lefted">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Terms of service</h1>
                     <p class="py-6">
-                        <b>Last updated: 2023/10/01</b><br><br>
+                        <b>Last updated: 2024/04/20</b><br><br>
 
                         By using Futami, you agree to the following:<br><br>
-
-                        ● Use Futami responsibly and in accordance with the laws of Thailand.<br>
-                        ● Respect other users and avoid harassing or abusing them.<br>
-                        ● Do not use Futami to spread hate speech or violence.<br>
-                        ● Do not spam or send unsolicited messages.<br>
-                        ● Do not distribute malware or other harmful content.<br><br>
 
                         Futami is protected by copyright and other intellectual property laws. You are not allowed to
                         copy, distribute, or modify Futami without the developer's permission.<br><br>
@@ -92,11 +99,15 @@
                         The developer may terminate your access to Futami at any time, for any reason, and without
                         notice.<br><br>
 
-                        The developer may change these terms of service at any time. Any changes will be posted on the
-                        Futami website and will take effect immediately.<br><br>
+                        <b>Please note While we strive for optimal service, it's important to acknowledge the
+                            following :</b><br>
+                        ● Futami's availability cannot guarantee 99.99% uptime.<br>
+                        ● Futami reserves the right to cease service without prior notice.<br>
+                        ● Futami may undergo temporary maintenance, resulting in offline periods without prior
+                        notification.<br>
+                        ● Futami does not assure the safety of servers utilizing the bot.<br>
+                        ● Futami reserves the right to deny service to any user without prior notice.<br>
 
-                        These terms of service shall be governed by and construed in accordance with the laws of
-                        Thailand, without regard to its conflict of law provisions.
                     </p>
                 </div>
             </div>
