--- a/service/document.html
+++ b/service/document.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         <img width="100%" src="./assets/divider.png">
-        <div class="hero bg-base-200 hero-normal">
+        <div style="padding-top: 40px;" class="hero bg-base-200">
             <div class="hero-content text-center">
                 <div class="max-w-md lefted">
                     <div role="alert" class="alert alert-warning">
