--- a/service/index.html
+++ b/service/index.html
@@ -55,10 +55,12 @@
                 </div>
                 <div>
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Futami <span
-                            style="color: white;font-weight: normal;" data-theme="forest"
-                            class="badge badge-primary animate__animated animate__jello animate__delay-1s animate__infinite">All
-                            service is
-                            online</span></h1>
+                            style="display: inline-block;"><a
+                                href="https://uptime.betterstack.com/?utm_source=status_badge"><img
+                                    class="animate__animated animate__jello animate__delay-1s animate__infinite"
+                                    src="https://uptime.betterstack.com/status-badges/v3/monitor/uu30.svg"
+                                    alt="Better Stack Badge"></a>
+                        </span></h1>
                     <p class="py-6">Imagine music bot<br>Message from Futami : You're so cute 💙
                     </p>
                     <div class="btn-group">
