--- a/firebase/public/404.html
+++ b/firebase/public/404.html
@@ -25,10 +25,13 @@
         </span>
     </button>
     <div>
-        <div class="hero min-h-screen hero-head ">
+        <div class="hero min-h-screen hero-head parallax-container">
             <div style="gap: 3rem;"
                 class="hero-content flex-col lg:flex-row-reverse animate__animated animate__fadeInUp">
-                <img style="max-width: 18rem;" src="./assets/Futami-maskot.png" class="max-w-sm rounded-lg" />
+                <div class="">
+                    <img style="max-width: 18rem;" src="./assets/Futami-maskot.png"
+                        class="max-w-sm rounded-lg parallax-img" />
+                </div>
                 <div>
                     <h1 class="text-5xl font-bold">Oh no! ,You got 404</h1>
                     <p class="py-6">The page that you finding does not exist ! , Plase check the url again</p>
