--- a/service/index.html
+++ b/service/index.html
@@ -103,7 +103,7 @@
                 </div>
             </div>
         </div>
-        <div style="padding-top: 0;" class="hero bg-base-200 hero-game">
+        <div style="padding-top: 0;" class="hero bg-base-200 hero-normal hero-game">
             <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row">
                 <img style="max-width: 18rem;" src="./assets/feature-game.png"
                     class="max-w-sm rounded-lg shadow-2xl image-feature" />
@@ -257,7 +257,10 @@
                     Service</a> and <a href="./document.html" style="text-decoration: underline;">Privacy Policy</a>
                 <br><br>The
                 developer may change these terms of service at any time. Any changes will be posted on the Futami
-                website and will take effect immediately.
+                website and will take effect immediately.<br><br>
+                ● Futami come with administrator permission you can customize it as
+                you want in your server
+                role menu
             </p>
             <div class="form-control">
                 <label class="label cursor-pointer">
@@ -265,7 +268,7 @@
                         PP</span>
                     <input id="agreeBox" type="checkbox" class="checkbox" />
                 </label>
-                <!-- label class="label cursor-pointer">
+                <!-- <label class="label cursor-pointer">
                     <span id="agreeText2" class="label-text">I know Futami won't receive updates or bug fixes and
                         discontinued after 31.03.24</span>
                     <input id="agreeBox2" type="checkbox" class="checkbox" />
