Update API display

--- a/service/index.html
+++ b/service/index.html
@@ -289,7 +289,7 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>Id</th>
+                            <th>Thumbnail</th>
                             <th>Name</th>
                             <th>Uploader</th>
                         </tr>
