--- a/service/index.html
+++ b/service/index.html
@@ -37,8 +37,7 @@
         </svg>
         <span>Futami : End of Support (29.03.24)</span>
     </div> -->
-    <button style="width: 60px !important;height: 60px !important;"
-        class="btn btn-circle btn-outline button-top animate__animated" id="top-button">
+    <button class="btn btn-circle btn-outline button-top animate__animated" id="top-button">
         <span class="material-symbols-outlined">
             vertical_align_top
         </span>
