--- a/service/statics.html
+++ b/service/statics.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <img width="100%" src="./assets/divider.png">
-        <div id="FetchContainer" style="padding-top: 40px;padding-bottom: 50px;" class="hero bg-base-200 prepare-load">
+        <div id="FetchContainer" style="padding-top: 40px;padding-bottom: 50px;" class="hero bg-base-200 min-h-screen">
             <div class="hero-content text-center">
                 <div class="max-w-md lefted">
                     <div style="display: block;" id="FetchLoader">
