--- a/service/index.html
+++ b/service/index.html
@@ -114,11 +114,11 @@
         </div>
         <div style="padding-top: 0;" class="hero bg-base-200 hero-normal">
             <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
-                <img style="max-width: 18rem;" src="./assets/feature-fun.png"
+                <img style="max-width: 20rem;" src="./assets/feature-chat.png"
                     class="max-w-sm rounded-lg shadow-2xl image-feature" />
                 <div>
-                    <h1 class="text-5xl font-bold">Make discord more funny</h1>
-                    <p class="py-6">With fun command</p>
+                    <h1 class="text-5xl font-bold">Interact with you</h1>
+                    <p class="py-6">Chat with Futami</p>
                 </div>
             </div>
         </div>
@@ -128,6 +128,16 @@
                 <div>
                     <h1 class="text-5xl font-bold">Make moderation easier</h1>
                     <p class="py-6">Now to can use command to moderation your server</p>
+                </div>
+            </div>
+        </div>
+        <div style="padding-top: 0;" class="hero bg-base-200 hero-normal">
+            <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
+                <img style="max-width: 18rem;" src="./assets/feature-fun.png"
+                    class="max-w-sm rounded-lg shadow-2xl image-feature" />
+                <div>
+                    <h1 class="text-5xl font-bold">Make discord more funny</h1>
+                    <p class="py-6">With fun command</p>
                 </div>
             </div>
         </div>
