Add air command guilde

--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -206,6 +206,7 @@
                             </div>
                             <div class="collapse-content lefted">
                                 <p>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> air</b> : Check PM 2.5 Status<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> info</b> : Show server info<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> about</b> : See about me<br>
                                     <b>ping</b> : See my response time<br>
