--- a/service/statics.html
+++ b/service/statics.html
@@ -67,7 +67,7 @@
                 </div>
                 <div style="display: none;" id="FetchTable" class="overflow-x-auto text-focus-in">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Status</h1>
-                    <p class="py-4">Futami's server status</p>
+                    <p class="py-4">Futami's server status (VPS)<br><b id="DataUptime"></b></p>
                     <div class="stats  stats-vertical lg:stats-horizontal shadow">
 
                         <div class="stat">
