--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -25,10 +25,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <script src="./darkmode.js"></script>
     <script defer src="./index.js"></script>
 </head>
 
-<body>
+<body onmousemove="GetCursor(event)">
     <!-- <div role="alert" class="alert alert-warning alert-top">
         <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -39,6 +40,11 @@
     <button class="btn btn-circle btn-outline button-top animate__animated" id="top-button">
         <span class="material-symbols-outlined">
             vertical_align_top
+        </span>
+    </button>
+    <button onclick="RealDarkMode()" class="btn btn-circle btn-outline button-dark animate__animated">
+        <span class="material-symbols-outlined">
+            nights_stay
         </span>
     </button>
     <div>
@@ -244,9 +250,9 @@
             </aside>
         </footer>
     </div>
-    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+    <!-- <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
         data-id="fujatyping" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF"
-        data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+        data-position="Right" data-x_margin="18" data-y_margin="18"></script> -->
     <dialog id="filter_modal" class="modal">
         <div class="modal-box">
             <h3 class="font-bold text-lg">Filter list <a href="https://ffmpeg.org/ffmpeg-filters.html">(FFmpeg audio
