--- a/firebase/public/statics.html
+++ b/firebase/public/statics.html
@@ -74,7 +74,7 @@
                 <div style="display: none;" id="FetchTable" class="overflow-x-auto text-focus-in">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Status</h1>
                     <p class="py-4">Futami's server status (VPS)<br><b id="DataUptime"></b></p>
-                    <div class="stats  stats-vertical lg:stats-horizontal shadow">
+                    <div class="stats stats-vertical lg:stats-horizontal shadow">
 
                         <div class="stat">
                             <div class="stat-figure text-base-300">
@@ -125,6 +125,12 @@
                             </tr>
                         </tbody>
                     </table>
+                    <h1 style="font-family: Young Serif;margin-top: 50px;" class="text-5xl font-bold">Web Statics</h1>
+                    <p class="py-4">Futami web visit count</p>
+                    <div class="footer footer-center">
+                        <img width="250px" style="margin-top: 8px;"
+                            src="https://count.getloli.com/get/@futami?theme=moebooru">
+                    </div>
                 </div>
             </div>
         </div>
