--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -27,6 +27,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="./darkmode.js"></script>
     <script defer src="./index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
 <body onmousemove="GetCursor(event)">
@@ -232,12 +233,15 @@
                     <p class="py-6">Fuumi is a music bot created by FujaTyping in response to a request from his close
                         friend, ph007phop. Fuumi can play music from a variety of sources and quickly gained popularity
                         among Discord users.</p>
-                    <div class="btn-group">
+                    <div class="join lastjoin">
                         <button onclick="window.location.href = 'https://discord.gg/D5nVCNskqN';"
-                            class="btn bg-base-300"><span class="material-symbols-outlined">support_agent</span>
+                            class="btn join-item"><span class="material-symbols-outlined">support_agent</span>
                             Support</button>
+                        <button onclick="window.location.href = 'https://buymeacoffee.com/fujatyping';"
+                            class="btn join-item"><span class="material-symbols-outlined">savings</span>
+                            Donate</button>
                         <button onclick="window.location.href = 'https://github.com/FujaTyping/Futami';"
-                            class="btn btn-outline"><span class="material-symbols-outlined">frame_source</span>
+                            class="btn join-item"><span class="material-symbols-outlined">frame_source</span>
                             Source code</button>
                     </div>
                 </div>
@@ -246,7 +250,11 @@
         <footer class="footer footer-center p-4 bg-base-300 text-base-content">
             <aside>
                 <p>Copyright © <a href="https://siraphop.me/">FujaTyping</a> 2023-2024 | All right reserved</p>
-                <img width="200px" style="margin-top: 8px;" src="https://count.getloli.com/get/@futami?theme=moebooru">
+                <script type="text/javascript">
+                    axios.get('https://count.getloli.com/get/@futami?theme=moebooru').catch(function (error) {
+                        throw error;
+                    });
+                </script>
             </aside>
         </footer>
     </div>
