--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -250,11 +250,8 @@
         <footer class="footer footer-center p-4 bg-base-300 text-base-content">
             <aside>
                 <p>Copyright © <a href="https://siraphop.me/">FujaTyping</a> 2023-2024 | All right reserved</p>
-                <script type="text/javascript">
-                    axios.get('https://count.getloli.com/get/@futami?theme=moebooru').catch(function (error) {
-                        throw error;
-                    });
-                </script>
+                <img width="250px" style="margin-top: 8px;display: none;"
+                    src="https://count.getloli.com/get/@futami?theme=moebooru">
             </aside>
         </footer>
     </div>
